--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -86,7 +86,7 @@
       provider: "{{ provider }}"
       authorize: yes
       banner: login
-      text: "{{ lookup('file', './raw_banner.cfg') }}"
+      text: "{{ lookup('file', './vars/raw_banner.cfg') }}"
       state: present
         
         
