--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -88,6 +88,16 @@
       banner: login
       text: "{{ lookup('file', './vars/raw_banner.cfg') }}"
       state: present
+      
+   - name: SHOW RUN | BEG BANNER
+    ios_command:
+      provider: "{{ provider }}"
+      authorize: yes
+      commands:
+        - show run | beg banner
+    register: banner
+
+  - debug: var=banner.stdout_lines:     
         
         
         
