--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -97,7 +97,7 @@
         - show run | beg banner
     register: banner
 
-  - debug: var=banner.stdout_lines:     
+  - debug: var=banner.stdout_lines     
         
         
         
